--- a/login page/index.html
+++ b/login page/index.html
@@ -10,8 +10,8 @@
     .parent{
         width: 100%;
         height: 800px;
-        padding: 0px;
-        margin: 0px;
+        padding: 0;
+        margin: 0;
         background:
         linear-gradient( rgb(255, 0, 225), transparent),
         linear-gradient(to top left, lime, transparent),
@@ -38,7 +38,7 @@
         width: 30%;
         height: 80%;
         margin-left: 35%;
-        border: 1px solid black;
+        border: 0px ;
         background-color: rgb(255,255,255);
         border-radius: 15px;
 
@@ -69,12 +69,12 @@
             <input type="text" name="username" placeholder="Type your username" class="l2" size="30"><br><br>
             <label class="l1">Password</label><br>
             <input type="password" class="l2" placeholder="Type your password" size="30"><br>
-            <label style="margin-left: 70%;" >forgot password?</label>
+            <label style="margin-left: 70%;" ><a href="#" style="text-decoration: none;" > forgot password?</a></label>
             <div class="login">Login</div><br><br><br>
             <label style="margin-left: 38%;">or signup using</label><br>
-            <div class="logo" style="margin-left: 30%;"><img src="https://img.icons8.com/color/50/000000/facebook-new.png" alt="facebook"/></div>
-            <div class="logo"><img src="https://img.icons8.com/color/48/000000/twitter-circled--v1.png" alt="twittel"/></div>
-            <div class="logo"><img src="https://img.icons8.com/fluent/48/000000/google-logo.png" alt="google"/></div><br><br><br><br>
+            <div class="logo" style="margin-left: 30%;"><a href="https://www.facebook.com"><img src="https://img.icons8.com/color/50/000000/facebook-new.png" alt="facebook"/></a></div>
+            <div class="logo"><a href="https://www.twitter.com"><img src="https://img.icons8.com/color/48/000000/twitter-circled--v1.png" alt="twittel"/></a></div>
+            <div class="logo"><a href="https://www.google.com"><img src="https://img.icons8.com/fluent/48/000000/google-logo.png" alt="google"/></a></div><br><br><br><br>
             <label style="margin-left: 40%; font-size: 12px;">or Sign Up Using</label><br>
             <a href="#" style="margin-left: 45%; margin-top: 30%; text-decoration: none;">SIGNUP</a><br><br>
             <div style="margin-left: 25%; margin-top: 25%;"><label>Managed By: Ahmad Salman Malik</label></div>
