--- a/login page/index.html
+++ b/login page/index.html
@@ -7,6 +7,10 @@
     <title>Login_Page</title>
 </head>
 <style>
+    body{
+        margin: 0;
+        padding: 0;
+    }
     .parent{
         width: 100%;
         height: 800px;
