--- a/login page/index.html
+++ b/login page/index.html
@@ -16,10 +16,11 @@
         height: 800px;
         padding: 0;
         margin: 0;
-        background:
+       /* background:
         linear-gradient( rgb(255, 0, 225), transparent),
         linear-gradient(to top left, lime, transparent),
-        linear-gradient(to top right, rgb(0, 255, 187), transparent);
+        linear-gradient(to top right, rgb(0, 255, 187), transparent); */
+        background-image: radial-gradient(circle, #ae136b, #ac2786, #a43aa2, #944dbc, #7a5fd4, #6070e0, #407ee8, #008bec, #0097e2, #009fce, #00a3b4, #0fa59b);
         background-blend-mode: screen;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
@@ -36,6 +37,7 @@
         linear-gradient( rgb(255, 0, 225), transparent),
        /* linear-gradient(to top left, lime, transparent),*/
         linear-gradient(to top right, rgb(0, 255, 187), transparent);
+       /* background-image: radial-gradient(circle, #ae136b, #ac2786, #a43aa2, #944dbc, #7a5fd4, #6070e0, #407ee8, #008bec, #0097e2, #009fce, #00a3b4, #0fa59b); */
     }
     .center{
         align-content: center;
@@ -45,7 +47,7 @@
         border: 0px ;
         background-color: rgb(255,255,255);
         border-radius: 15px;
-
+        margin-top: 55px;
     }
     .l1{
         margin-left: 20%;
@@ -68,7 +70,7 @@
 <body>
     <div class="parent"><br>
         <div class="center"> <br><br>
-            <strong style="margin-left: 46%; font-size: 25px;">Login</strong><br><br>
+            <strong style="margin-left: 40%; font-size: 25px;">Login</strong><br><br>
             <label class="l1">Username</label><br>
             <input type="text" name="username" placeholder="Type your username" class="l2" size="30"><br><br>
             <label class="l1">Password</label><br>
